--- a/dkms.conf
+++ b/dkms.conf
@@ -4,5 +4,5 @@ BUILT_MODULE_NAME="8188eu"
 DEST_MODULE_LOCATION="/kernel/drivers/net/wireless/"
 REMAKE_INITRD="yes"
 AUTOINSTALL="yes"
-MAKE="'make' all"
+MAKE="'make' all KVER=${kernelver}"
 CLEAN="'make' clean"
